--- a/ODE_Tut_10.cbp
+++ b/ODE_Tut_10.cbp
@@ -6,38 +6,241 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
-				<Option output="../ode_executables/Debug/ODE_Tut_10" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Debug/" />
+			<Target title="DebugSingleDLL">
+				<Option output="../../build/ode_executables/DebugSingleDLL/ODE_Tut_10.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/DebugSingleDLL/ODE_Tut_10" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-D_DEBUG" />
+					<Add option="-DdSINGLE" />
+					<Add option="-DWIN32" />
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
 				</Compiler>
+				<Linker>
+					<Add directory="../../lib/DebugSingleDLL" />
+					<Add library="ode_singled" />
+					<Add library="drawstuffd" />
+					<Add library="user32" />
+					<Add library="winmm" />
+					<Add library="gdi32" />
+					<Add library="opengl32" />
+					<Add library="glu32" />
+				</Linker>
+				<ResourceCompiler>
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</ResourceCompiler>
 			</Target>
-			<Target title="Release">
-				<Option output="bin/Release/ODE_Tut_10" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
+			<Target title="ReleaseSingleDLL">
+				<Option output="../../build/ode_executables/ReleaseSingleDLL/ODE_Tut_10.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/ReleaseSingleDLL/ODE_Tut_10" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-O3" />
+					<Add option="-fomit-frame-pointer" />
+					<Add option="-DdSINGLE" />
+					<Add option="-DWIN32" />
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add directory="../../lib/ReleaseSingleDLL" />
+					<Add library="ode_single" />
+					<Add library="drawstuff" />
+					<Add library="user32" />
+					<Add library="winmm" />
+					<Add library="gdi32" />
+					<Add library="opengl32" />
+					<Add library="glu32" />
 				</Linker>
+				<ResourceCompiler>
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</ResourceCompiler>
+			</Target>
+			<Target title="DebugSingleLib">
+				<Option output="../../build/ode_executables/DebugSingleLib/ODE_Tut_10.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/DebugSingleLib/ODE_Tut_10" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-D_DEBUG" />
+					<Add option="-DdSINGLE" />
+					<Add option="-DWIN32" />
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</Compiler>
+				<Linker>
+					<Add directory="../../lib/DebugSingleLib" />
+					<Add library="ode_singled" />
+					<Add library="drawstuffd" />
+					<Add library="user32" />
+					<Add library="winmm" />
+					<Add library="gdi32" />
+					<Add library="opengl32" />
+					<Add library="glu32" />
+				</Linker>
+				<ResourceCompiler>
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</ResourceCompiler>
+			</Target>
+			<Target title="ReleaseSingleLib">
+				<Option output="../../build/ode_executables/ReleaseSingleLib/ODE_Tut_10.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/ReleaseSingleLib/ODE_Tut_10" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O3" />
+					<Add option="-fomit-frame-pointer" />
+					<Add option="-DdSINGLE" />
+					<Add option="-DWIN32" />
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add directory="../../lib/ReleaseSingleLib" />
+					<Add library="ode_single" />
+					<Add library="drawstuff" />
+					<Add library="user32" />
+					<Add library="winmm" />
+					<Add library="gdi32" />
+					<Add library="opengl32" />
+					<Add library="glu32" />
+				</Linker>
+				<ResourceCompiler>
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</ResourceCompiler>
+			</Target>
+			<Target title="DebugDoubleDLL">
+				<Option output="../../build/ode_executables/DebugDoubleDLL/ODE_Tut_10.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/DebugDoubleDLL/ODE_Tut_10" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-D_DEBUG" />
+					<Add option="-DdDOUBLE" />
+					<Add option="-DWIN32" />
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</Compiler>
+				<Linker>
+					<Add directory="../../lib/DebugDoubleDLL" />
+					<Add library="ode_doubled" />
+					<Add library="drawstuffd" />
+					<Add library="user32" />
+					<Add library="winmm" />
+					<Add library="gdi32" />
+					<Add library="opengl32" />
+					<Add library="glu32" />
+				</Linker>
+				<ResourceCompiler>
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</ResourceCompiler>
+			</Target>
+			<Target title="ReleaseDoubleDLL">
+				<Option output="../../build/ode_executables/ReleaseDoubleDLL/ODE_Tut_10.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/ReleaseDoubleDLL/ODE_Tut_10" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O3" />
+					<Add option="-fomit-frame-pointer" />
+					<Add option="-DdDOUBLE" />
+					<Add option="-DWIN32" />
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add directory="../../lib/ReleaseDoubleDLL" />
+					<Add library="ode_double" />
+					<Add library="drawstuff" />
+					<Add library="user32" />
+					<Add library="winmm" />
+					<Add library="gdi32" />
+					<Add library="opengl32" />
+					<Add library="glu32" />
+				</Linker>
+				<ResourceCompiler>
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</ResourceCompiler>
+			</Target>
+			<Target title="DebugDoubleLib">
+				<Option output="../../build/ode_executables/DebugDoubleLib/ODE_Tut_10.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/DebugDoubleLib/ODE_Tut_10" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-D_DEBUG" />
+					<Add option="-DdDOUBLE" />
+					<Add option="-DWIN32" />
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</Compiler>
+				<Linker>
+					<Add directory="../../lib/DebugDoubleLib" />
+					<Add library="ode_doubled" />
+					<Add library="drawstuffd" />
+					<Add library="user32" />
+					<Add library="winmm" />
+					<Add library="gdi32" />
+					<Add library="opengl32" />
+					<Add library="glu32" />
+				</Linker>
+				<ResourceCompiler>
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</ResourceCompiler>
+			</Target>
+			<Target title="ReleaseDoubleLib">
+				<Option output="../../build/ode_executables/ReleaseDoubleLib/ODE_Tut_10.exe" prefix_auto="0" extension_auto="0" />
+				<Option object_output="obj/ReleaseDoubleLib/ODE_Tut_10" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O3" />
+					<Add option="-fomit-frame-pointer" />
+					<Add option="-DdDOUBLE" />
+					<Add option="-DWIN32" />
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add directory="../../lib/ReleaseDoubleLib" />
+					<Add library="ode_double" />
+					<Add library="drawstuff" />
+					<Add library="user32" />
+					<Add library="winmm" />
+					<Add library="gdi32" />
+					<Add library="opengl32" />
+					<Add library="glu32" />
+				</Linker>
+				<ResourceCompiler>
+					<Add directory="../../include" />
+					<Add directory="../../ode/src" />
+				</ResourceCompiler>
 			</Target>
 		</Build>
-		<Compiler>
-			<Add option="-Wall" />
-			<Add option="-fexceptions" />
-		</Compiler>
-		<Unit filename="main.cpp" />
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-			<lib_finder disable_auto="1" />
-		</Extensions>
+		<Unit filename="../../build/ODE_Tut_10/main.cpp">
+			<Option compilerVar="CPP" />
+		</Unit>
+		<Unit filename="../../drawstuff/src/resources.rc">
+			<Option compilerVar="WINDRES" />
+		</Unit>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
